# rpi-notes

./: .gitignore  README.md  README.md.template  README.servicemonitor.md  README.systemd.md  app.py  install.sh  listservices.sh  metrics.sh  pre-commit.sh  pyproject.toml  scheduler.py  services.py  services.txt  telegram.py  update_system.sh
.cursor/rules/python/: RULE.md
cloudflared/: README.md  config.yml
install/: install.sh  projects_service-monitor.service  projects_servicemonitor.service
src/: __init__.py  app.py  canned_info.py  config.py  scheduler.py  services.py  telegram.py  values.py.example
static/: app.css  app.js  style.css
templates/: index.html
tests/: test_app.py  test_config.py  test_services.py
